--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </a>
             </div>
         </section>
-    </div>>
+    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
     <script src="JS/jquery.vide.min.js"></script>
